--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-sidebar-dashboard-taskmanager",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Sajid Mahamud",
+    "email": "sajidmahamud835@gmail.com",
+    "url": "https://github.com/sajidmahamud835/react-sidebar-dashboard-taskmanager"
+  },
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -13,9 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
